# claude-guardrails-framework

./: .gitignore  README.md  pyproject.toml
examples/: moderate-node.yml  moderate-python-microservice.yml  moderate-sql.yml  permissive-python-analysis.yml  strict-python-microservice.yml  strict-python-multi-agent-stateful-ai.yml
packs/: analysis.yml  change-control.yml  compliance.yml  performance.yml  privacy.yml  security.yml  style.yml
profiles/: moderate.yml  permissive.yml  strict.yml
scripts/: compose.py  loader.py  renderer.py
targets/: base.yml  docs.yml  microservice.yml  multi-agent-ai.yml  node.yml  opentofu.yml  python.yml  sql.yml  stateful-ai.yml
templates/: Makefile.scaffold  Makefile.scaffold.app  Makefile.scaffold.infra  claude.md.tmpl  pyproject.python.ruff.snippet.toml
tests/: test_multi_agent_ai_composition.py
